--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -13,7 +13,7 @@ body{
     height: 56px;
     padding: 0 16px 0 16px;
     /* width: 100%; */
-    background-color: white;
+    background-color:rgb(20, 20, 20);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,7 +26,7 @@ body{
 }
 .more:hover{
     border-radius: 50px;
-    background-color:#d3d3d3;
+    background-color: rgb(44, 44, 44);
     cursor: pointer;
 }
 
@@ -62,26 +62,20 @@ body{
 .search-box{
     margin-left: 32px;
 }
-input:focus{
-    outline: none;
+.search input{
+    border-color: rgb(53, 53, 53);
     text-decoration: none;
-    
-    box-shadow: inset;
-    border: 1px solid hsl(205.9, 80%, 43.1%);
 }
 
 
 /* Center header  */
 
 .search{
-   
-    border: 1px solid #d3d3d3;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     width: 540px;
     height: 40px;
     border-radius: 25px 0px 0px 25px;
-}
-.search:focus{
-    box-shadow: inset 0 0 3px #727272;
 }
 
 .search-btn{
@@ -89,25 +83,20 @@ input:focus{
     height: 42px;
     width: 64px;
     padding: 8px;
-    margin-left: 0px;
+    margin-left: 1px;
     box-sizing: border-box;
-    background-color: #f5f5f5;
-    border: 1px solid #d3d3d3;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     border-left: 0;
     display: flex;
     justify-content: center;
     border-radius: 0px 25px 25px 0px;
 }
-
-.search-btn:hover{
-    cursor: pointer;
-    background-color: #e9e9e9;
-}
 .mic-btn{
     height: 42px;
     width: 42px;
-    background-color: #f5f5f5;
-    border: 1px solid white;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     border-left: 0;
     display: flex;
     justify-content: center;
@@ -116,7 +105,11 @@ input:focus{
     margin-left: 8px;
 }
 
-
+.search-btn:hover, .mic-btn:hover, .notice-btn{
+    
+    background-color: rgb(58, 58, 58);
+    cursor: pointer;
+}
 
 .search-logo , .mic-logo{
     height: 23px;
@@ -137,8 +130,8 @@ input:focus{
 .notice-btn{
     height: 42px;
     width: 42px;
-    
-    border: 1px solid white;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     border-left: 0;
     display: flex;
     justify-content: center;
@@ -150,8 +143,8 @@ input:focus{
 .upload-btn{
     height: 42px;
     width: 42px;
-    
-    border: 1px solid white;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     border-left: 0;
     display: flex;
     justify-content: center;
@@ -160,16 +153,11 @@ input:focus{
     margin-left: 8px;
 }
 
-.upload-btn:hover, .notice-btn:hover, .mic-btn:hover{
-    cursor: pointer;
-    background-color: #d3d3d3;
-}
-
 .user-btn{
     height: 42px;
     width: 42px;
-    background-color: white;
-    border: 1px solid white;
+    background-color: rgb(29, 29, 29);
+    border: 1px solid rgb(53, 53, 53);
     
     
     border-radius: 25px;
