--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,6 @@ body{
     justify-content: center;
 }
 
-.left img{
-    width: 100%;
-    height: 100%;
-}
 .search-box{
     margin-left: 32px;
 }
@@ -122,7 +118,7 @@ input:focus{
     height: 23px;
     width: 23px;
 }
-.search-logo img, .mic-logo{
+img{
     height: 100%;
     width: 100%;
 }
@@ -179,6 +175,90 @@ input:focus{
     height: 43px;
     width: 43px;
 }
+
+.sidebar{
+    position: fixed;
+    top: 0;
+    left: 0px;
+    height: 94vh;
+    width: 250px;
+    background-color: white;
+    transition: 0.4s;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    user-select: none;
+    
+}
+.sidebar-show{
+    left: 250px;
+}
+
+.top-logo{
+    display: flex;
+    align-items: center;
+    padding: 0 12px 0 12px;
+    height: 56px;
+    width: 222px;
+}
+
+
+.sidebar-content{
+    
+    padding: 12px;
+    width: 100%px;
+    height: 100%;
+    overflow: auto;
+}
+.icon_with_name{
+    display: flex;
+    align-items: center;
+    width: 204;
+    height: 40px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+.sidebar-content hr{
+    margin-top: 12px;
+    margin-bottom: 12px;
+    border-color: rgb(240, 240, 240);
+}
+.icon_with_name:hover{
+    background-color: rgb(235, 235, 235);
+}
+.icon_with_name img{
+    width: 20px;
+    height: 20px;
+    padding: 0px 12px;
+}
+
+.icon_with_name p{
+    padding: 0px 12px;
+   
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    
+    
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    margin-right: 5px;
+    border-radius: 20px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(104, 104, 104); 
+    border-radius: 10px;
+    padding-right: 5px;
+  }
+  ::-webkit-scrollbar-
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(139, 139, 139); 
+  }
 
 
 @media (max-width: 1100px){
