--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-body{
+
+body {
     height: 6000px;
 
 }
 
-.header{
-    
- 
+.header {
+
+
     height: 56px;
     padding: 0 16px 0 16px;
     /* width: 100%; */
@@ -19,49 +21,51 @@ body{
     justify-content: space-between;
 }
 
-.more{
+.more {
     width: 21px;
     height: 21px;
     padding: 10px;
 }
-.more:hover{
+
+.more:hover {
     border-radius: 50px;
-    background-color:#d3d3d3;
+    background-color: #d3d3d3;
     cursor: pointer;
 }
 
-.youtube-logo{
+.youtube-logo {
     height: 23px;
     padding: 8px;
     padding: 18px 14px 18px 16x;
-    font-family: Arial;
+
     color: aliceblue;
 }
 
-.left{
+.left {
     width: 169px;
     display: flex;
     align-items: center;
 }
 
-.center{
+.center {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
 }
 
-.header.center{
+.header.center {
     justify-content: center;
 }
 
-.search-box{
+.search-box {
     margin-left: 32px;
 }
-input:focus{
+
+input:focus {
     outline: none;
     text-decoration: none;
-    
+
     box-shadow: inset;
     border: 1px solid hsl(205.9, 80%, 43.1%);
 }
@@ -69,18 +73,19 @@ input:focus{
 
 /* Center header  */
 
-.search{
-   
+.search {
+
     border: 1px solid #d3d3d3;
     width: 540px;
     height: 40px;
     border-radius: 25px 0px 0px 25px;
 }
-.search:focus{
+
+.search:focus {
     box-shadow: inset 0 0 3px #727272;
 }
 
-.search-btn{
+.search-btn {
 
     height: 42px;
     width: 64px;
@@ -95,11 +100,12 @@ input:focus{
     border-radius: 0px 25px 25px 0px;
 }
 
-.search-btn:hover{
+.search-btn:hover {
     cursor: pointer;
     background-color: #e9e9e9;
 }
-.mic-btn{
+
+.mic-btn {
     height: 42px;
     width: 42px;
     background-color: #f5f5f5;
@@ -114,26 +120,28 @@ input:focus{
 
 
 
-.search-logo , .mic-logo{
+.search-logo,
+.mic-logo {
     height: 23px;
     width: 23px;
 }
-img{
+
+img {
     height: 100%;
     width: 100%;
 }
 
-.right{
+.right {
     display: flex;
     flex-direction: row;
 }
 
 
 
-.notice-btn{
+.notice-btn {
     height: 42px;
     width: 42px;
-    
+
     border: 1px solid white;
     border-left: 0;
     display: flex;
@@ -143,10 +151,10 @@ img{
     margin-left: 8px;
 }
 
-.upload-btn{
+.upload-btn {
     height: 42px;
     width: 42px;
-    
+
     border: 1px solid white;
     border-left: 0;
     display: flex;
@@ -156,44 +164,73 @@ img{
     margin-left: 8px;
 }
 
-.upload-btn:hover, .notice-btn:hover, .mic-btn:hover{
+.upload-btn:hover,
+.notice-btn:hover,
+.mic-btn:hover {
     cursor: pointer;
     background-color: #d3d3d3;
 }
 
-.user-btn{
+.user-btn {
     height: 42px;
     width: 42px;
     background-color: white;
     border: 1px solid white;
-    
-    
+
+
     border-radius: 25px;
     margin-left: 8px;
 }
-.user-btn img{
+
+.user-btn img {
     height: 43px;
     width: 43px;
 }
 
-.sidebar{
+.tablet-icons {
+    position: fixed;
+    top: 51px;
+    left: 0;
+    height: 100vh;
+    width: 58px;
+    justify-content: center;
+    visibility: hidden;
+    margin-top: 20px;
+}
+
+.tablet-icons .icon_with_name {
+    margin-left: 15px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    width: 54px;
+    font-size: 0.7rem;
+}
+
+
+
+
+
+
+
+
+.sidebar {
     position: fixed;
     top: 0;
     left: 0px;
-    height: 94vh;
+    height: 100vh;
     width: 250px;
     background-color: white;
     transition: 0.4s;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     user-select: none;
-    
+
 }
-.sidebar-show{
+
+.sidebar-show {
     left: 250px;
 }
 
-.top-logo{
+.top-logo {
     display: flex;
     align-items: center;
     padding: 0 12px 0 12px;
@@ -202,92 +239,130 @@ img{
 }
 
 
-.sidebar-content{
-    
+.sidebar-content {
+
     padding: 12px;
     width: 100%px;
     height: 100%;
     overflow: auto;
 }
-.icon_with_name{
+
+.icon_with_name {
     display: flex;
     align-items: center;
-    width: 204;
+    width: 204px;
     height: 40px;
     border-radius: 12px;
     cursor: pointer;
 }
-.sidebar-content hr{
+
+.sidebar-content hr {
     margin-top: 12px;
     margin-bottom: 12px;
     border-color: rgb(240, 240, 240);
 }
-.icon_with_name:hover{
+
+.icon_with_name:hover {
     background-color: rgb(235, 235, 235);
 }
-.icon_with_name img{
+
+.icon_with_name img {
     width: 20px;
     height: 20px;
     padding: 0px 12px;
 }
 
-.icon_with_name p{
+.icon_with_name p {
     padding: 0px 12px;
-   
+
 }
 
 ::-webkit-scrollbar {
     width: 8px;
-    
-    
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+
+
+}
+
+/* Track */
+::-webkit-scrollbar-track {
     margin-right: 5px;
     border-radius: 20px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgb(104, 104, 104); 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(104, 104, 104);
     border-radius: 10px;
     padding-right: 5px;
-  }
-  ::-webkit-scrollbar-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(139, 139, 139); 
-  }
+}
+
+::-webkit-scrollbar-
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(139, 139, 139);
+}
 
 
-@media (max-width: 1100px){
-    .search{
+@media (max-width: 1100px) {
+    .search {
         display: none;
     }
-    .search-btn{
+
+    .search-btn {
         width: 43px;
         border-radius: 25px;
-        justify-content:center;
+        justify-content: center;
         float: auto;
     }
-    .youtube-logo{
+
+    .youtube-logo {
         width: fit-content;
 
     }
-    .left{
+
+    .left {
         width: 1000px;
     }
-    .left{
+
+    .left {
         float: left;
         left: 1px;
+    }
+
+}
+
+@media(max-width: 478px) {
+
+    .mic-btn,
+    .upload-btn {
+        display: none;
+    }
+
+}
+
+@media(max-width: 1312px) {
+    .sidebar {
+        left: -250px;
+    }
+
+}
+@media(max-width: 1312px) and (min-width: 198px){
+    .tablet-icons {
+        transition: 0.4s;
+        visibility: visible;
     }
     
 }
 
-@media(max-width: 478px){
-    .mic-btn, .upload-btn{
-        display: none;
+@media(max-width:   350px) {
+    .youtube-logo{
+        visibility: hidden;
     }
+    .more{
+        position: fixed;
+        top: 16px;
+        left: 16px;
+    }   
 
 }
